# Hall-control-mixer

ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/02_RS485_Test/: sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/04_RTC_Test/: sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/05_IO_Test/: CMakeLists.txt  sdkconfig.defaults
MIXER_BODY/: platformio.ini
MIXER_BODY/src/: M62429_Driver.h  main.cpp  main_production.cpp.bak
MIXER_BODY/תיעוד/: פינים.txt
MixerController/: DEVELOPER_GUIDE_HE.md  ESP32-S3 LVGL RGB FPS Optimization.txt  README.md  build_log.txt  build_log_v2.txt  build_log_v3.txt  platformio.ini  sdkconfig.defaults  אופטימיזציית LVGL ל-ESP32-S3.txt
MixerController/src/: app_data.cpp  app_data.h  esp_panel_board_custom_conf.h  lv_conf.h  main.cpp  main_production.cpp.bak  main_test.cpp.bak  ui_events_impl.cpp
MixerController/src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h
MixerController/src/ui/fonts/: ui_font_Hebrew30.c
MixerController/src/ui/images/: ui_img_1424899605.c  ui_img_1916212264.c  ui_img_461411260.c
MixerController/src/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen3.c  ui_Screen3.h
PCB/: BOM_Board1_PCB4_2026-01-01.xlsx
PCB/V1/: PickAndPlace_PCB4_2026-01-01.xlsx  ProPrj_AUDIO CONTROLER_2026-01-01.epro
PCB/V2/: BOM_Board1_PCB4_2026-01-28.xlsx  PickAndPlace_PCB4_2026-01-28.xlsx
UI/: ui.h  ui_events.c  ui_events.h
UI/fonts/: ui_font_Hebrew50.c
UI/images/: ui_img_1771564824.c  ui_img_237439637.c  ui_img_481835706.c
UI/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen2.h
(+23 files in other folders)
